@@ -1,3 +1,9 @@
+2017-03-15  Uros Bizjak  <ubizjak@gmail.com>
+
+	PR target/80019
+	* config/i386/i386.c (ix86_vector_duplicate_value): Create
+	subreg of inner mode for values already in registers.
+
 2017-03-10  Michael Meissner  <meissner@linux.vnet.ibm.com>
 
 	Back port from trunk
